<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".application.ui.actordetail.ActorDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/actorDetailProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="visible" />

        <TextView
            android:id="@+id/actorDetailTextError"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/connection_problem"
            android:visibility="gone" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/actorDetailImageView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/actor_detail_height_image_view"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image_default_actor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/actor_detail_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/actorDetailName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold"
                        tools:text="Leonardo Di Caprio" />

                    <TextView
                        android:id="@+id/actorDetailBiography"
                        style="@style/descriptionDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/movie_detail_margin_top_description"
                        tools:text="Biography..." />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/movie_detail_margin_top_title"
                        android:text="@string/actor_detail_actor_information"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/movie_detail_margin_top_description"
                            android:text="@string/actor_detail_birthday"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/actorDetailBirthday"
                            style="@style/descriptionDetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/movie_detail_margin_start_description"
                            android:layout_marginTop="@dimen/movie_detail_margin_top_description"
                            tools:text="02/04/1884" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/movie_detail_margin_top_description"
                            android:text="@string/actor_detail_popularity"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/acotrDetailPopularity"
                            style="@style/descriptionDetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/movie_detail_margin_start_description"
                            android:layout_marginTop="@dimen/movie_detail_margin_top_description"
                            tools:text="8.0" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/movie_detail_margin_top_description"
                            android:text="@string/actor_detail_place_of_birth"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/actorDetailPlaceOfBirth"
                            style="@style/descriptionDetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/movie_detail_margin_start_description"
                            android:layout_marginTop="@dimen/movie_detail_margin_top_description" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/movie_detail_margin_top_description"
                            android:text="@string/actor_detail_homepage"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/actorDetailHomepage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/movie_detail_margin_start_description"
                            android:layout_marginTop="@dimen/movie_detail_margin_top_description"
                            android:autoLink="web" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>